--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
 		<!-- ... -->
 <section class="container">
-    <h2 id="titulo-form">Adicionar novo paciente</h2>
+	<h2 id="titulo-form">Adicionar novo paciente</h2>
+	<ul id="mensagem-erro"></ul>
     <form class="form-adiciona">
         <div class="grupo">
             <label for="nome">Nome:</label>
