buscar pacientes por api / tratamento de erro

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<h2>Meus pacientes</h2>
 				<label for="filtrar-tabela">Filtro</label>
 				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
+				<span id="erro-ajax" class="invisible"> Erro ao buscar os pacientes </span>
 				<table>
 					<thead>
 						<tr>
@@ -73,6 +74,8 @@
 					</tbody>
 				</table>
 
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
+
 			</section>
 		</main>
 
@@ -108,6 +111,6 @@
 			<script src="js/form.js"></script>
 			<script src="js/remover-paciente.js"></script>
 			<script src="js/filtra.js"></script>
-
+			<script src="js/buscar-paciente.js"></script>
 	</body>
 </html>
